# midka-dev-tools-templates

./: .dccache  LICENSE  config.toml
blank/: config.toml
discord-bot/: Cargo.toml  README.md  config.toml
discord-bot/rust/: Cargo.toml
dnsconfig/: config.toml
dnsconfig/javascript/: README.md  dnsconfig.js
dnsconfig/javascript/.github/workflows/: dns_check.yml  dns_preview.yml  dns_push.yml
dnsconfig/javascript/domains/: example.js
ritta/: config.toml
ritta/TypeScript/: .gitignore  package.json
ritta/TypeScript/src/SERVICENAMEHERE/: SERVICENAMEHERE.controller.ts  SERVICENAMEHERE.service.ts
ritta/typescript/: README.md  use_template.js
ritta/typescript/src/: app.module.ts  logger.format.ts  main.ts
ritta/typescript/src/SERVICENAMEHERE/: SERVICENAMEHERE.controller.spec.ts  SERVICENAMEHERE.module.ts
